--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ buildscript {
         lifecycleVersion = '2.4.1'
         pagingVersion = '3.1.1'
         multiDexVersion = '2.0.1'
+        glideVersion = '4.13.1'
+        circleImageVersion = '3.1.0'
 
         // Firebase
         firebaseCoreVersion = '20.1.2'
