--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.codequark.superhero">
 
+	<uses-permission android:name="android.permission.INTERNET" />
+
 	<application
 		android:name=".application.Application"
 		android:allowBackup="true"
