--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ buildscript {
         circleImageVersion = '3.1.0'
         touchImageVersion = '3.0.1'
 
+        // GSON
+        gsonVersion = '2.9.0'
+
         // RequestManager
         retrofitVersion = '2.9.0'
         okHttpVersion = '5.0.0-alpha.6'
